--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,31 +14,31 @@ reference:
     Functions for reading data from the API into R.
 - contents:
   - starts_with("sent")
-navbar:
-  structure:
-    left:
-    - intro
-    - reference
-    - articles
-    - tutorials
-    - news
-    right: github
-  components:
-    intro:
-      icon: fa-home fa-lg
-      href: index.html
-    reference:
-      text: Reference
-      href: reference/index.html
-    news:
-      text: Changelog
-      href: news/index.html
-    github:
-      icon: fab fa-github fa-lg
-      href: https://github.com/71point4/sententia/
-      aria-label: github
-    articles:
-      text: Articles
-      menu:
-      - text: Plotting
-        href: articles/Plotting.html
+# navbar:
+#   structure:
+#     left:
+#     - intro
+#     - reference
+#     - articles
+#     - tutorials
+#     - news
+#     right: github
+#   components:
+#     intro:
+#       icon: fa-home fa-lg
+#       href: index.html
+#     reference:
+#       text: Reference
+#       href: reference/index.html
+#     news:
+#       text: Changelog
+#       href: news/index.html
+#     github:
+#       icon: fab fa-github fa-lg
+#       href: https://github.com/71point4/sententia/
+#       aria-label: github
+#     articles:
+#       text: Articles
+#       menu:
+#       - text: Plotting
+#         href: articles/Plotting.html
