--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: 2.11.2
-pkgdown: 1.6.1.9001
-pkgdown_sha: ce9781a15c7ea07df9fb17a11295ba4abec0b54b
+pandoc: 2.11.4
+pkgdown: 1.6.1
+pkgdown_sha: ~
 articles:
   Plotting: Plotting.html
   multiple_paramters: multiple_paramters.html
-last_built: 2021-10-07T10:11Z
+last_built: 2021-10-11T08:28Z
 
